# Games

./: readme.md
Madhav_Arnav/: .gitignore  CMakeLists.txt
Madhav_Arnav/include/: defender.h  enemy.h
Madhav_Arnav/src/: defenders.cpp  enemies.cpp  main.cpp
Naresh_Shreyas/Version1/: CMakeLists.txt  bullet.cpp  bullet.h  enemy.cpp  enemy.h  main.cpp  myrect.cpp  myrect.h  score.cpp  score.h
Naresh_Shreyas/Version2/: CMakeLists.txt  Score.cpp  Score.h  bullet.cpp  bullet.h  enemy.cpp  enemy.h  enemyspawner.cpp  enemyspawner.h  main.cpp  player.cpp  player.h
Sinan_Anoushka/: readme.md
Sinan_Anoushka/SnakeGame/: CMakeLists.txt  game.cpp  game.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
Tejaswini_Sanika/flappybird/: bird.cpp  bird.h  bullet.cpp  bullet.h  column.cpp  column.h  flappybird.pro  main.cpp  myRect.cpp  myRect.h
